Sun Apr 20 22:52:42 BST 2003  Olly Betts <olly@survex.com>

	* configure.in,api/omenquire.cc,common/expand.h,
	  common/omenquireinternal.h,docs/overview.html,include/,
	  matcher/expand.cc,tests/api_db.cc: OmExpandDecider ->
	  Xapian::ExpandDecider, etc.

Sun Apr 20 22:42:32 BST 2003  Olly Betts <olly@survex.com>

	* PLATFORMS,api/,backends/,common/,docs/,include/,matcher/,net/,
	  netprogs/,tests/,testsuite/: OmError -> Xapian::Error, etc.

Fri Apr 18 22:40:31 BST 2003  Sam Liddicott <sam@liddicott.com>

	* matcher/multimatch.cc: Fixed so that it updates the OmMSetItem in
	  the MSet with the collapse_count from the OmMSetItem twin in
	  collapse_tab or we lose collapse_count if newer collapsing hits are
	  less relevant than the hits they collapse over.  I think we need
	  collapse_tab maybe to keep a reference to the item in the mset?  But
	  this works for now.
	* xapian.spec.in: Fixed to also install include/xapian stuff 

Fri Apr 18 19:17:56 BST 2003  Olly Betts <olly@survex.com>

	* configure.in,include/Makefile.am,include/om/.cvsignore,
	  include/om/Makefile.am,include/om/om.h,include/om/om.h.in,
	  include/xapian/.cvsignore,include/xapian/Makefile.am,
	  include/xapian/dir_contents,include/xapian/version.h.in:
	  C++ ABI version checking is now done by xapian/version.h.

Fri Apr 18 17:57:21 BST 2003  Olly Betts <olly@survex.com>

	* configure.in,api/omstem.cc,include/Makefile.am,include/om/om.h.in,
	  include/om/omstem.h,include/xapian/.cvsignore,
	  include/xapian/Makefile.am,include/xapian/base.h,
	  include/xapian/stem.h: Reworked OmStem to use reference counted
	  internals; renamed OmStem to Xapian::Stem and added a #define for
	  compatibility with existing code.

Fri Apr 18 17:02:56 BST 2003  Olly Betts <olly@survex.com>

	* api/,backends/,common/,docs/overview.html,docs/quickstart.html,
	  docs/quickstartexpand.cc.html,extra/,include/om/,matcher/,net/,
	  tests/,testsuite/: Use std::string instead of typedef-ing it as